# memory

./: .gdbinit  .gitignore  Cargo.toml  README.md  cargo.toml  create_disk.ps1  create_disk.sh  load-symbols.py  protocol.rs
.github/workflows/: rust.yml
client/: Cargo.toml  Makefile.toml
client/src/: driver.rs  main.rs  protocol.rs
driver/: Cargo.toml  Makefile.toml  build.rs
driver/.cargo/: config.toml
driver/src/: driver.rs  logger.rs  main.rs  utils.rs
protocol/: Cargo.toml  Makefile.toml
protocol/src/: lib.rs
