cargo-features = ["per-package-target"]

[package]
name = "client"
version = "0.1.0"
authors = ["louga31 <louga31@gmail.com>"]
edition = "2021"
forced-target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }