[package]
name = "client"
version = "0.1.0"
authors = ["louga31 <louga31@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[dependencies]
winapi = "0.3"
kernel32-sys = "0.2"

[dependencies.ntapi]
git = "https://github.com/MSxDOS/ntapi"
features = [
    "func-types",
    "impl-default",
]