cargo-features = ["per-package-target"]

[package]
name = "driver"
version = "0.1.0"
authors = ["louga31 <louga31@gmail.com>"]
edition = "2021"
forced-target = "x86_64-unknown-uefi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[dependencies]
uefi = "0.14.0"
# uefi-services = "0.10"
r-efi = "4.0"
x86_64 = "0.14"
atomic_refcell = "0.1"
ezhook = "0.2"